--- a/templates/index.html
+++ b/templates/index.html
@@ -53,5 +53,9 @@
     <button type="submit" value="Submit">Submit</button>
 </form>
 
+    {% if name %}
+        <h2>Beküldött adat:</h2>
+        <p>Név: {{ name }}</p>
+    {% endif %}
 </body>
 </html>
