--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,11 @@
     <button type="submit" value="Submit">Submit</button>
 </form>
 
-    {% if name %}
+    {% if products_ %}
         <h2>Beküldött adat:</h2>
-        <p>Név: {{ name }}</p>
+        {% for product in products_ %}
+            {{ product }}
+        {% endfor %}
     {% endif %}
 </body>
 </html>
