--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 </table>
 <h2>Adatok beküldése</h2>
 
-<form action="/" method="POST">
+<form action="/submit_products" method="POST">
     <label for="name">Terméknév:</label>
     <input type="text" id="product_name" name="product_name"><br><br>
     <button type="submit" value="Submit">Submit</button>
@@ -55,9 +55,12 @@
 
     {% if products_ %}
         <h2>Beküldött adat:</h2>
+        <ul>
         {% for product in products_ %}
-            {{ product }}
+            <li>{{ product }}</li>
         {% endfor %}
+        </ul>
     {% endif %}
+
 </body>
 </html>
